Configuração dos mixins

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-><h2>Olá Coders</h2>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+	<meta charset="UTF-8">
+	<title>Achei Pra Você</title>
+</head>
+<body>
+	<h2>APV</h2>
+</body>
+</html>
