--- a/index.html
+++ b/index.html
@@ -3,8 +3,77 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Achei Pra Você</title>
+	<link rel="stylesheet" href="css/geral.css">
+	<link rel="stylesheet" href="css/plugins.css">
 </head>
 <body>
-	<h2>APV</h2>
+	<header>
+		<div class="menu-navegacao">
+			<nav>
+				<ul>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="#">Achei</a></li>
+					<li><a href="#">Notícias</a></li>
+					<li><a href="#">Eventos</a></li>
+					<li><a href="#">Comedy</a></li>
+					<li><a href="#">Sobre</a></li>
+				</ul>
+			</nav>
+		</div>
+	</header>
+	<main>
+		<form>
+			<div class="form-group">
+				<input type="text" class="form-control" id="formPesquisaDocumento" placeholder="Pesquisar Documentos" name="pesquisa-documento">
+			</div>
+		</form>
+
+		<div class="logo-main">
+			<img src="images/logo-apv.svg" alt="Logo Main Central APV">
+		</div>
+
+		<div id="carrocel-ad-main" class="carousel slide" data-ride="crousel">
+			<ol class="carousel-indicators">
+				<li data-target="<div id="carrocel-ad-main" data-slide-to="0" class="active">"></li>
+				<li data-target="<div id="carrocel-ad-main" data-slide-to="1"></li>
+				<li data-target="<div id="carrocel-ad-main" data-slide-to="2"></li>
+			</ol>
+			<div class="carousel-inner">
+				<div class="carousel-item active">
+					<img src="..." alt="ad1" class="d-block w-100">
+				</div>
+			</div>
+			<div class="carousel-inner">
+				<div class="carousel-item">
+					<img src="..." alt="ad2" class="d-block w-100">
+				</div>
+			</div>
+			<div class="carousel-inner">
+				<div class="carousel-item">
+					<img src="..." alt="ad3" class="d-block w-100">
+				</div>
+			</div>
+			<a href="#" class="carousel-control-prev" role="button" data-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="sr-only">Previous</span>
+			</a>
+			<a href="#" class="carousel-control-next" role="button" data-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="sr-only">Next</span>
+			</a>
+		</div>
+	</main>
+	<footer>
+		<div class="apresentacao">
+			<h1>Achei Pra Vc</h1>
+			<p>Incididunt eu in deserunt ut veniam aliquip pariatur laboris reprehenderit mollit ut in sed voluptate aliquip sed eiusmod esse tempor nulla consectetur occaecat in culpa in ea dolore ad.</p>
+		</div>
+		<div class="logo-rodape">
+			<a href="index.html"><img src="images/logo-apv-circular.svg" alt="Logo Footer APV"></a>
+		</div>
+		<div class="direitos-autorais">
+			2018 <span class="icones"><i class="fa fa-copyright"></i></span> Todos os Direitos Reservados
+		</div>
+	</footer>
 </body>
 </html>
