--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Achei Pra Você</title>
 	<link rel="stylesheet" href="css/geral.css">
 	<link rel="stylesheet" href="css/plugins.css">
+	<link rel="stylesheet" href="css/home.css">
 </head>
 <body>
 	<header>
@@ -22,45 +23,48 @@
 		</div>
 	</header>
 	<main>
-		<form>
-			<div class="form-group">
-				<input type="text" class="form-control" id="formPesquisaDocumento" placeholder="Pesquisar Documentos" name="pesquisa-documento">
-			</div>
-		</form>
+		<div class="container">
 
-		<div class="logo-main">
-			<img src="images/logo-apv.svg" alt="Logo Main Central APV">
-		</div>
+			<div class="logo-main">
+				<img src="images/logo-apv.svg" alt="Logo Main Central APV">
+			</div>
 
-		<div id="carrocel-ad-main" class="carousel slide" data-ride="crousel">
-			<ol class="carousel-indicators">
-				<li data-target="<div id="carrocel-ad-main" data-slide-to="0" class="active">"></li>
-				<li data-target="<div id="carrocel-ad-main" data-slide-to="1"></li>
-				<li data-target="<div id="carrocel-ad-main" data-slide-to="2"></li>
-			</ol>
-			<div class="carousel-inner">
-				<div class="carousel-item active">
-					<img src="..." alt="ad1" class="d-block w-100">
+			<form>
+				<div class="form-group">
+					<input type="text" class="form-control" id="formPesquisaDocumento" placeholder="Pesquisar Documentos" name="pesquisa-documento">
 				</div>
-			</div>
-			<div class="carousel-inner">
-				<div class="carousel-item">
-					<img src="..." alt="ad2" class="d-block w-100">
+			</form>
+
+			<div id="carrocel-ad-main" class="carousel slide" data-ride="crousel">
+				<ol class="carousel-indicators">
+					<li data-target="<div id="carrocel-ad-main" data-slide-to="0" class="active">"></li>
+					<li data-target="<div id="carrocel-ad-main" data-slide-to="1"></li>
+					<li data-target="<div id="carrocel-ad-main" data-slide-to="2"></li>
+				</ol>
+				<div class="carousel-inner">
+					<div class="carousel-item active">
+						<img src="..." alt="ad1" class="d-block w-100">
+					</div>
 				</div>
-			</div>
-			<div class="carousel-inner">
-				<div class="carousel-item">
-					<img src="..." alt="ad3" class="d-block w-100">
+				<div class="carousel-inner">
+					<div class="carousel-item">
+						<img src="..." alt="ad2" class="d-block w-100">
+					</div>
 				</div>
+				<div class="carousel-inner">
+					<div class="carousel-item">
+						<img src="..." alt="ad3" class="d-block w-100">
+					</div>
+				</div>
+				<a href="#" class="carousel-control-prev" role="button" data-slide="prev">
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					<span class="sr-only">Previous</span>
+				</a>
+				<a href="#" class="carousel-control-next" role="button" data-slide="next">
+					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					<span class="sr-only">Next</span>
+				</a>
 			</div>
-			<a href="#" class="carousel-control-prev" role="button" data-slide="prev">
-				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-				<span class="sr-only">Previous</span>
-			</a>
-			<a href="#" class="carousel-control-next" role="button" data-slide="next">
-				<span class="carousel-control-next-icon" aria-hidden="true"></span>
-				<span class="sr-only">Next</span>
-			</a>
 		</div>
 	</main>
 	<footer>
@@ -71,8 +75,16 @@
 		<div class="logo-rodape">
 			<a href="index.html"><img src="images/logo-apv-circular.svg" alt="Logo Footer APV"></a>
 		</div>
-		<div class="direitos-autorais">
-			2018 <span class="icones"><i class="fa fa-copyright"></i></span> Todos os Direitos Reservados
+		<div class="rodape-final">
+			<ul class="direitos-autorais">
+				<li>2018</li>
+				<li><i class="fas fa-copyright"></i></span></li>
+				<li>Todos os Direitos Reservados</li>
+			</ul>
+			<ul class="termos-privacidade">
+				<li><a href="#">Termos de Uso</a></li>
+				<li><a href="#">Privacidade</a></li>
+			</ul>
 		</div>
 	</footer>
 </body>
