--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 	<header>
+		<!--
 		<div class="menu-navegacao">
 			<nav>
 				<ul>
@@ -21,52 +22,64 @@
 				</ul>
 			</nav>
 		</div>
+	-->
 	</header>
+
 	<main>
 		<div class="container">
 
-			<div class="logo-main">
-				<img src="images/logo-apv.svg" alt="Logo Main Central APV">
-			</div>
+			<section class="logo">
 
-			<form>
-				<div class="form-group">
-					<input type="text" class="form-control" id="formPesquisaDocumento" placeholder="Pesquisar Documentos" name="pesquisa-documento">
+				<div class="logo-main">
+					<img src="images/logo-apv.svg" alt="Logo Main Central APV">
 				</div>
-			</form>
 
-			<div id="carrocel-ad-main" class="carousel slide" data-ride="crousel">
-				<ol class="carousel-indicators">
-					<li data-target="<div id="carrocel-ad-main" data-slide-to="0" class="active">"></li>
-					<li data-target="<div id="carrocel-ad-main" data-slide-to="1"></li>
-					<li data-target="<div id="carrocel-ad-main" data-slide-to="2"></li>
-				</ol>
-				<div class="carousel-inner">
-					<div class="carousel-item active">
-						<img src="..." alt="ad1" class="d-block w-100">
+			</section>
+
+			<section class="busca">
+				<form action="" method="post">
+					<input class="form-control" type="search" id="busca-documento" name="busca" placeholder="Pesquisar Documento">
+					<button type="submit" class="btn btn-success">ok</button>
+				</form>
+			</section>
+
+			<section class="ad">
+				<!--
+				<div id="carrocel-ad-main" class="carousel slide" data-ride="crousel">
+					<ol class="carousel-indicators">
+						<li data-target="<div id="carrocel-ad-main" data-slide-to="0" class="active">"></li>
+						<li data-target="<div id="carrocel-ad-main" data-slide-to="1"></li>
+						<li data-target="<div id="carrocel-ad-main" data-slide-to="2"></li>
+					</ol>
+					<div class="carousel-inner">
+						<div class="carousel-item active">
+							<img src="..." alt="ad1" class="d-block w-100">
+						</div>
 					</div>
-				</div>
-				<div class="carousel-inner">
-					<div class="carousel-item">
-						<img src="..." alt="ad2" class="d-block w-100">
+					<div class="carousel-inner">
+						<div class="carousel-item">
+							<img src="..." alt="ad2" class="d-block w-100">
+						</div>
 					</div>
-				</div>
-				<div class="carousel-inner">
-					<div class="carousel-item">
-						<img src="..." alt="ad3" class="d-block w-100">
+					<div class="carousel-inner">
+						<div class="carousel-item">
+							<img src="..." alt="ad3" class="d-block w-100">
+						</div>
 					</div>
+					<a href="#" class="carousel-control-prev" role="button" data-slide="prev">
+						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						<span class="sr-only">Previous</span>
+					</a>
+					<a href="#" class="carousel-control-next" role="button" data-slide="next">
+						<span class="carousel-control-next-icon" aria-hidden="true"></span>
+						<span class="sr-only">Next</span>
+					</a>
 				</div>
-				<a href="#" class="carousel-control-prev" role="button" data-slide="prev">
-					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-					<span class="sr-only">Previous</span>
-				</a>
-				<a href="#" class="carousel-control-next" role="button" data-slide="next">
-					<span class="carousel-control-next-icon" aria-hidden="true"></span>
-					<span class="sr-only">Next</span>
-				</a>
-			</div>
+			-->
+			</section>
 		</div>
 	</main>
+
 	<footer>
 		<div class="apresentacao">
 			<h1>Achei Pra Vc</h1>
