--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="css/geral.css">
 	<link rel="stylesheet" href="css/plugins.css">
 	<link rel="stylesheet" href="css/home.css">
+	<link rel="stylesheet" href="bower_components/components-font-awesome/css/fa-solid.css">
 </head>
 <body>
 	<header>
@@ -39,9 +40,10 @@
 			<section class="busca">
 				<form action="" method="post">
 					<input class="form-control" type="search" id="busca-documento" name="busca" placeholder="Pesquisar Documento">
-					<button type="submit" class="btn btn-success">ok</button>
+					<button type="submit" class="btn btn-success"><i class="fas fa-search"></i></button>
 				</form>
 			</section>
+
 
 			<section class="ad">
 				<!--
