--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Achei Pra Você</title>
+	<link rel="stylesheet" href="bower_components/components-font-awesome/css/fa-solid.css">
+
 	<link rel="stylesheet" href="css/geral.css">
 	<link rel="stylesheet" href="css/plugins.css">
 	<link rel="stylesheet" href="css/home.css">
-	<link rel="stylesheet" href="bower_components/components-font-awesome/css/fa-solid.css">
+
+	
 </head>
 <body>
 	<header>
@@ -46,38 +49,60 @@
 
 
 			<section class="ad">
-				<!--
-				<div id="carrocel-ad-main" class="carousel slide" data-ride="crousel">
-					<ol class="carousel-indicators">
-						<li data-target="<div id="carrocel-ad-main" data-slide-to="0" class="active">"></li>
-						<li data-target="<div id="carrocel-ad-main" data-slide-to="1"></li>
-						<li data-target="<div id="carrocel-ad-main" data-slide-to="2"></li>
-					</ol>
-					<div class="carousel-inner">
-						<div class="carousel-item active">
-							<img src="..." alt="ad1" class="d-block w-100">
+
+				
+				<div class="propagandas">
+					<div id="myCarousel" class="carousel slide" data-ride="carousel">
+						<ol class="carousel-indicators">
+							<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+							<li data-target="#myCarousel" data-slide-to="1"></li>
+							<li data-target="#myCarousel" data-slide-to="2"></li>
+						</ol>
+						<div class="carousel-inner">
+							<div class="carousel-item active">
+								<img class="first-slide" src="images/propagandas.png" alt="First slide">
+								<div class="container">
+									<div class="carousel-caption text-left">
+										<h1>Example headline.</h1>
+										<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+										<p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+									</div>
+								</div>
+							</div>
+							<div class="carousel-item">
+								<img class="second-slide" src="images/propagandas.png" alt="Second slide">
+								<div class="container">
+									<div class="carousel-caption">
+										<h1>Another example headline.</h1>
+										<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+										<p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+									</div>
+								</div>
+							</div>
+							<div class="carousel-item">
+								<img class="third-slide" src="images/propagandas.png" alt="Third slide">
+								<div class="container">
+									<div class="carousel-caption text-right">
+										<h1>One more for good measure.</h1>
+										<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+										<p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+									</div>
+								</div>
+							</div>
 						</div>
+						<a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+							<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+							<span class="sr-only">Previous</span>
+						</a>
+						<a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+							<span class="carousel-control-next-icon" aria-hidden="true"></span>
+							<span class="sr-only">Next</span>
+						</a>
 					</div>
-					<div class="carousel-inner">
-						<div class="carousel-item">
-							<img src="..." alt="ad2" class="d-block w-100">
-						</div>
-					</div>
-					<div class="carousel-inner">
-						<div class="carousel-item">
-							<img src="..." alt="ad3" class="d-block w-100">
-						</div>
-					</div>
-					<a href="#" class="carousel-control-prev" role="button" data-slide="prev">
-						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-						<span class="sr-only">Previous</span>
-					</a>
-					<a href="#" class="carousel-control-next" role="button" data-slide="next">
-						<span class="carousel-control-next-icon" aria-hidden="true"></span>
-						<span class="sr-only">Next</span>
-					</a>
 				</div>
-			-->
+
+
+
 			</section>
 		</div>
 	</main>
