inclusão do termo de uso e da privacidade como modal no Index e no busca

--- a/busca.html
+++ b/busca.html
@@ -164,10 +164,51 @@
 				<li>Todos os Direitos Reservados</li>
 			</ul>
 			<ul class="termos-privacidade">
-				<li><a href="#">Termos de Uso</a></li>
-				<li><a href="#">Privacidade</a></li>
+				<li><a data-toggle="modal" data-target="#ModalTermosDeUso" href="#ModalTermosDeUso">Termos de Uso</a></li>
+				<li><a data-toggle="modal" data-target="#ModalPrivacidade" href="#ModalPrivacidade">Privacidade</a></li>
 			</ul>
 		</div>
+
+
+
+<!-- MODAL TERMOS DE USO-->
+		<div class="modal fade" id="ModalTermosDeUso" tabindex="-1" role="dialog" aria-labelledby="modal-title" aria-hidden="true">
+			<div class="modal-dialog" role="document">
+			<!-- Modal content-->
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal">&times;</button>
+						<h4 class="modal-title titulo-modal">Termos de Uso</h4>
+					</div>
+					<div class="modal-body">
+						<p>Termos de uso do site de buscas documentais Achei Pra Vc.</p>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn" data-dismiss="modal">Fechar</button>
+					</div>
+				</div>
+			</div>
+		</div>
+
+<!-- MODAL PRIVACIDADE-->
+		<div class="modal fade" id="ModalPrivacidade" tabindex="-1" role="dialog" aria-labelledby="modal-title" aria-hidden="true">
+			<div class="modal-dialog" role="document">
+			<!-- Modal content-->
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal">&times;</button>
+						<h4 class="modal-title titulo-modal">Privacidade</h4>
+					</div>
+					<div class="modal-body">
+						<p>Termos que tratam da privacidade dos usuários do site de buscas documentais Achei Pra Vc.</p>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn" data-dismiss="modal">Fechar</button>
+					</div>
+				</div>
+			</div>
+		</div>	
+
 	</footer>
 </body>
 </html>
